2219.	[bug]		Apply zone consistancy checks to additions, not
			removals, when updating. [RT #17049]

2218.	[bug]		Remove unnecessary REQUIRE from dns_validator_create().
			[RT #16976]

2216.	[cleanup]	Fix a number of errors reported by Coverity.
		        [RT #17094]

2215.	[bug]		Bad REQUIRE check isc_hmacsha1_verify(). [RT #17094]

2214.	[bug]		Deregister OpenSSL lock callback when cleaning
			up.  Reorder OpenSSL cleanup so that RAND_cleanup()
			is called before the locks are destroyed. [RT #17098]

2213.	[bug]		SIG0 diagnostic failure messages were looking at the
			wrong status code. [RT #17101]

2212.	[func]		'host -m' now causes memory statistics and active
			memory to be printed at exit. [RT 17028]

2210.	[bug]		Deleting class specific records via UPDATE could
			fail.  [RT #17074]

2209.	[port]		osx: linking against user supplied static OpenSSL
			libraries failed as the system ones were still being
			found. [RT #17078]

2208.	[port]		win32: make sure both build methods produce the
			same output. [RT #17058]

2207.	[port]		Some implementations of getaddrinfo() fail to set
			ai_canonname correctly. [RT #17061]

	--- 9.4.2b1 released ---

2206.	[security]	"allow-query-cache" and "allow-recursion" now
			cross inherit from each other.

			If allow-query-cache is not set in named.conf then
			allow-recursion is used if set, otherwise allow-query
			is used if set, otherwise the default (localnets;
			localhost;) is used.

			If allow-recursion is not set in named.conf then
			allow-query-cache is used if set, otherwise allow-query
			is used if set, otherwise the default (localnets;
			localhost;) is used.

			[RT #16987]
	
2205.	[bug]		libbind: change #2119 broke thread support. [RT #16982]

2203.	[security]	Query id generation was cryptographically weak.
			[RT # 16915]

2202.	[security]	The default acls for allow-query-cache and 
			allow-recursion were not being applied. [RT #16960]

2200.	[bug]		The search for cached NSEC records was stopping to