@@ -1,3 +1,6 @@
+2220.	[bug]		win32: Address a race condition in final shutdown of
+			the Windows socket code. [RT #17028]
+			
 2219.	[bug]		Apply zone consistancy checks to additions, not
 			removals, when updating. [RT #17049]
 
